# github-actions-with-python

./: .gitattributes  README.md  pyproject.toml
.github/workflows/: bump-version.yml
src/github_actions_with_python/: __init__.py  _version.py
